policies/other/require-storageclass/require-storageclass.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mas-require-storageclass
  annotations:
    policies.kyverno.io/title: Require StorageClass
    policies.kyverno.io/category: Maximo Application Suite - Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: PersistentVolumeClaim, StatefulSet
    policies.kyverno.io/description: >-
      PersistentVolumeClaims (PVCs) and StatefulSets may optionally define a StorageClass
      to dynamically provision storage. In a multi-tenancy environment where StorageClasses are
      far more common, it is often better to require storage only be provisioned from these
      StorageClasses. This policy requires that PVCs and StatefulSets define the storageClassName
      field with some value.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: pvc-storageclass
      match:
        any:
          - resources:
              kinds:
                - PersistentVolumeClaim
              namespaces:
                - "mas-*-core"
                - "mas-*-assist"
                - "mas-*-facilities"
                - "mas-*-iot"
                - "mas-*-manage"
                - "mas-*-monitor"
                - "mas-*-optimizer"
                - "mas-*-predict"
                - "mas-*-visualinspection"
                - "sls-*"
                - "ibm-sls"
                - "ibm-dro"
                - "redhat-marketplace"
                - "db2u"
      validate:
        message: "PersistentVolumeClaims must define a storageClassName."
        pattern:
          spec:
            storageClassName: "?*"
    - name: ss-storageclass
      match:
        any:
          - resources:
              kinds:
                - StatefulSet
              namespaces:
                - "mas-*-core"
                - "mas-*-assist"
                - "mas-*-facilities"
                - "mas-*-iot"
                - "mas-*-manage"
                - "mas-*-monitor"
                - "mas-*-optimizer"
                - "mas-*-predict"
                - "mas-*-visualinspection"
                - "sls-*"
                - "ibm-sls"
                - "ibm-dro"
                - "redhat-marketplace"
                - "db2u"
      validate:
        message: "StatefulSets must define a storageClassName."
        pattern:
          spec:
            =(volumeClaimTemplates):
              - spec:
                  storageClassName: "?*"
